chart/template/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presentations
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - presentations.pedanticorderliness.com
      secretName: presentations-tls-key
  rules:
    - host: presentations.pedanticorderliness.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: presentations
                port:
                  number: 80
